forward to page  &  error handler continued...

--- a/builtin/pages/Error404.html
+++ b/builtin/pages/Error404.html
@@ -5,5 +5,9 @@
   </head>
   <body>
     <h1>Bang!!  404 Page not found!!.</h1>
+    <div>
+      <h3>Reason: </h3>
+      <div>{{.Error}}</div>
+    </div>
   </body>
 </html>
