--- a/builtin/pages/Error500.html
+++ b/builtin/pages/Error500.html
@@ -5,8 +5,9 @@
   </head>
   <body>
     <h1>500 Server Error!!</h1>
-    <div>-----
-      TODO show messages.
+    <div>
+      <h3>Reason: </h3>
+      <div>{{.Error}}</div>
     </div>
   </body>
 </html>
