--- a/builtin/pages/PermissionDenied.html
+++ b/builtin/pages/PermissionDenied.html
@@ -5,5 +5,9 @@
   </head>
   <body>
     <h1>Permission Denied! please contact your administrator.</h1>
+    <div>
+      <h3>Reason: </h3>
+      <div>{{.Error}}</div>
+    </div>
   </body>
 </html>
