event call on components. not finished

--- a/builtin/pages/got/Status.html
+++ b/builtin/pages/got/Status.html
@@ -16,6 +16,11 @@
         
         <t:got.templatestatus />
         
-      </div>    
+      </div>
+    </div>
+
+    <div>
+      <t:a event="TestEvent" label="test event link"/>
+    </div>
   </body>
 </html>
