finish unique TID generation

--- a/builtin/pages/got/Status.html
+++ b/builtin/pages/got/Status.html
@@ -12,7 +12,7 @@
           <h2>GOT Framework (Go on Tapestry)</h2>
         </div>
 
-        TODO Pages, Components, 
+        <a href=""></a>TODO Pages, Components, 
         
         <t:got.templatestatus />
         
