move some package to github

--- a/builtin/pages/got/Status.html
+++ b/builtin/pages/got/Status.html
@@ -29,7 +29,7 @@
         
         <div name="Pages">
           <h4>Pages:</h4>
-          {{.Pages | escape}}
+          {{.Pages}}
         </div>
         
         <div name="Components">
