--- a/builtin/pages/Error500.html
+++ b/builtin/pages/Error500.html
@@ -8,6 +8,8 @@
     <div>
       <h3>Reason: </h3>
       <div>{{.Error}}</div>
+      <div>----- Stack Trace ---------------------------</div>
+      <div style="width:960px"><pre>{{.Stack}}</pre></div>
     </div>
   </body>
 </html>
