--- a/builtin/pages/got/Status.html
+++ b/builtin/pages/got/Status.html
@@ -8,8 +8,9 @@
   <body>
 
     <div class="container-fluid">
+      <div class="alert alert-success">This page is used for Developers Only!</div>
       <div class="page-header">
-        <h3>GOT Framework <small>(Go on Tapestry)</small></h3>
+        <h3>GOT Framework Status <small>(This page is used for Developer Only!)</small></h3>
       </div>
 
       <ul class="nav nav-tabs" role="tablist">
