fix TemplateStatus page

--- a/builtin/pages/got/Status.html
+++ b/builtin/pages/got/Status.html
@@ -18,7 +18,7 @@
         <li class="{{.Style `modules`}}"><t:a event="Tab" context="modules" label="Modules"/></li>
         <li class="{{.Style `pages`}}"><t:a event="Tab" context="pages" label="Pages"/></li>
         <li class="{{.Style `components`}}"><t:a event="Tab" context="components" label="Components"/></li>
-        <li class="{{.Style `mixins`}}"><t:a event="Tab" context="mixins" label="Mixins"/></li>
+        <!-- <li class="{{.Style `mixins`}}"><t:a event="Tab" context="mixins" label="Mixins"/></li> -->
         <li class="{{.Style `templates`}}"><t:a event="Tab" context="templates" label="Templates"/></li>
         <li class="{{.Style `StructInfoCache`}}">
           <t:a event="Tab" context="StructInfoCache" label="StructInfoCache"/>
